infrastructure/base/apps/cloudnative-pg/networkPolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-prometheus
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: cloudnative-pg
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-prometheus
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "8080"
---
# egress to kube-apiserver
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-to-kube-apiserver
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: cloudnative-pg
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-node-to-webhook
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: cloudnative-pg
  ingress:
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "9443"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-from-operator-to-cluster
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: cloudnative-pg
  egress:
    - toEntities:
      - cluster
      toPorts:
        - ports:
            - port: "8000"
